adjust tmux config regarding macos

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,8 +21,9 @@ bind r source-file ~/.tmux.conf
 
 # copy to X clipboard
 bind -T copy-mode-vi v send -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard &> /dev/null'
-bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard &> /dev/null'
+# bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard &> /dev/null'
+# make macOS happy
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # shortcut for moving tmux buffer to clipboard
 # useful if you've selected with the mouse
@@ -31,13 +32,15 @@ bind-key -nr C-y run "tmux show-buffer | xsel -ib"
 bind b list-buffers
 bind p paste-buffer
 bind P choose-buffer "run \"tmux save-buffer -b %% - | xclip -i -sel clipboard\" \; run \" tmux display \\\"Clipboard \(+\) filled with: $(tmux save-buffer -b %1 - | dd ibs=1 obs=1 status=noxfer count=80 2> /dev/null)... \\\" \" "
-bind C-p run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer" \; run "tmux display \"Copied from \(+\) $(xclip -o -sel clipboard | dd ibs=1 obs=1 status=noxfer count=80 2> /dev/null)... \""
 
 # Avoid ESC delay
 set -s escape-time 0
 
 # enable vi mode keys
 set-window-option -g mode-keys vi
+
+unbind [
+bind Escape copy-mode
 
 # Mouse friendly
 set -g mouse on
