add move up/down key map

--- a/.ideavimrc
+++ b/.ideavimrc
@@ -15,6 +15,14 @@ nnoremap <space>' ct'
 nnoremap <space>" ct"
 nnoremap <space>- ct-
 nnoremap <space>_ ct_
+nnoremap <A-j> :m .+1<CR>==
+inoremap <A-j> <Esc>:m .+1<CR>==gi
+nnoremap <A-j> :m .+1<CR>==
+vnoremap <A-j> :m '>+1<CR>gv=gv
+nnoremap <A-k> :m .-2<CR>==
+nnoremap <A-k> :m .-2<CR>==
+inoremap <A-k> <Esc>:m .-2<CR>==gi
+vnoremap <A-k> :m '<-2<CR>gv=gv
 inoremap <C-j> <Esc>
 " built in search looks better
 nnoremap / :action Find<cr>
