--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,7 +22,6 @@ bind r source-file ~/.tmux.conf
 # copy to X clipboard
 bind -T copy-mode-vi v send -X begin-selection
 # bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard &> /dev/null'
-# make macOS happy
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # shortcut for moving tmux buffer to clipboard
@@ -65,37 +64,23 @@ set -g status-right-length 0
 
 #  modes
 setw -g clock-mode-colour colour5
-setw -g mode-attr bold
-setw -g mode-fg colour1
-setw -g mode-bg colour18
+setw -g mode-style fg=colour1,bg=colour18,bold
 
 # panes
-set -g pane-border-bg colour0
-set -g pane-border-fg colour19
-set -g pane-active-border-bg colour0
-set -g pane-active-border-fg colour9
+set -g pane-border-style bg=colour0,fg=colour19
+set -g pane-active-border-style bg=colour0,fg=colour9
 
 # statusbar
 set -g status-position bottom
 set -g status-justify left
-set -g status-bg colour18
-set -g status-fg colour137
-set -g status-attr dim
+set -g status-style bg=colour18,fg=colour137,dim
 set -g status-left-length 20
 
-setw -g window-status-current-fg colour1
-setw -g window-status-current-bg colour19
-setw -g window-status-current-attr bold
+setw -g window-status-current-style bg=colour19,fg=colour1,bold
 
-setw -g window-status-fg colour9
-setw -g window-status-bg colour18
-setw -g window-status-attr none
+setw -g window-status-style bg=colour18,fg=colour9,none
 
-setw -g window-status-bell-attr bold
-setw -g window-status-bell-fg colour255
-setw -g window-status-bell-bg colour1
+setw -g window-status-bell-style bg=colour1,fg=colour255,bold
 
 # messages
-set -g message-attr bold
-set -g message-fg colour232
-set -g message-bg colour16
+set -g message-style bg=colour16,fg=colour232,bold
