--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -3,11 +3,7 @@
   "extensions.ignoreRecommendations": false,
   "workbench.startupEditor": "newUntitledFile",
   "workbench.iconTheme": "vs-nomo-dark",
-  "workbench.colorCustomizations": {
-    "statusBar.background": "#005f5f",
-    "statusBar.noFolderBackground": "#005f5f",
-    "statusBar.debuggingBackground": "#005f5f"
-  },
+  "workbench.colorTheme": "One Dark Pro",
   "emmet.showExpandedAbbreviation": "inMarkupAndStylesheetFilesOnly",
   "editor.formatOnSave": true,
   "editor.insertSpaces": true,
@@ -16,21 +12,17 @@
   "editor.renderWhitespace": "boundary",
   "editor.renderIndentGuides": true,
   "editor.codeLens": true,
-  "editor.codeActionsOnSave": {
-    "source.fixAll": true,
-    "source.organizeImports": true
-  },
   "editor.largeFileOptimizations": false,
   "editor.wordWrap": "on",
+  "editor.suggestSelection": "first",
   "diffEditor.ignoreTrimWhitespace": false,
+  "diffEditor.maxComputationTime": 0,
   "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
-  "terminal.integrated.shell.linux": "/usr/bin/fish",
-  "terminal.integrated.shell.osx": "/usr/local/bin/fish",
   "terminal.integrated.fontSize": 14,
   "git.enableSmartCommit": true,
-  "window.zoomLevel": 0,
-  "vim.statusBarColorControl": true,
+  "vim.enableNeovim": true,
+  "vim.statusBarColorControl": false,
   "vim.easymotion": true,
   "vim.sneak": true,
   "vim.incsearch": true,
@@ -62,32 +54,45 @@
   ],
   "vim.leader": "<space>",
   "vim.handleKeys": {
-    "<C-a>": false,
     "<C-f>": false
   },
   "javascript.updateImportsOnFileMove.enabled": "always",
   "typescript.format.enable": true,
   "typescript.updateImportsOnFileMove.enabled": "always",
-  "[vue]": {
-    "editor.formatOnSave": false
-  },
   "[yaml]": {
     "editor.defaultFormatter": "redhat.vscode-yaml"
   },
-  "rust-analyzer.serverPath": "rust-analyzer",
   "go.useLanguageServer": true,
-  "eslint.alwaysShowStatus": true,
-  "eslint.validate": [
-    "javascript",
-    "javascriptreact",
-    "typescript",
-    "typescriptreact",
-    "vue"
-  ],
-  "vs-kubernetes": {
-    "vs-kubernetes.kubectl-path": "/usr/local/bin/kubectl",
-    "vs-kubernetes.helm-path": "/usr/local/bin/helm",
+  "go.toolsManagement.autoUpdate": true,
+  "[html]": {
+    "editor.defaultFormatter": "vscode.html-language-features"
   },
-  "editor.suggestSelection": "first",
-  "workbench.colorTheme": "One Dark Pro",
+  "camelk.integrations.runtimeVersion": "1.4.0",
+  "redhat.telemetry.enabled": false,
+  "files.exclude": {
+    "**/.classpath": true,
+    "**/.project": true,
+    "**/.settings": true,
+    "**/.factorypath": true
+  },
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "workbench.editorAssociations": {
+    "*.ipynb": "jupyter-notebook"
+  },
+  "[json]": {
+    "editor.defaultFormatter": "vscode.json-language-features"
+  },
+  "editor.inlineSuggest.enabled": true,
+  "notebook.cellToolbarLocation": {
+    "default": "right",
+    "jupyter-notebook": "left"
+  },
+  "github.copilot.enable": {
+    "*": false,
+    "yaml": false,
+    "plaintext": false,
+    "markdown": false
+  },
 }
