--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,15 @@
+###########################
+## Tmux Manager Plugins
+###########################
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'egel/tmux-gruvbox'
+
 # set scroll history to 100,000 lines
 set-option -g history-limit 100000
 
 # modern colors
 set -g default-terminal "xterm-256color"
-set -ga terminal-overrides ",xterm-256color:Tc"
+set -ag terminal-overrides ",xterm-256color:RGB"
 
 # unbind the prefix and bind it to Ctrl-a like screen
 unbind C-b
@@ -52,31 +58,4 @@ bind -n S-Down new-window
 set -g set-titles on
 set -g set-titles-string "#T"
 
-######################
-### DESIGN CHANGES ###
-######################
-
-#  modes
-setw -g clock-mode-colour colour5
-setw -g mode-style fg=colour1,bg=colour18,bold
-
-# panes
-set -g pane-border-style bg=colour0,fg=colour19
-set -g pane-active-border-style bg=colour0,fg=colour9
-
-# statusbar
-set -g status-position bottom
-set -g status-justify left
-set -g status-style bg=colour18,fg=colour137,dim
-set -g status-left-length 20
-
-# Avoid date/time taking up space
-set -g status-right ''
-set -g status-right-length 0
-
-setw -g window-status-current-style bg=colour19,fg=colour1,bold
-setw -g window-status-style bg=colour18,fg=colour9,none
-setw -g window-status-bell-style bg=colour1,fg=colour255,bold
-
-# messages
-set -g message-style bg=colour16,fg=colour232,bold
+run '~/.tmux/plugins/tpm/tpm'
