--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -30,7 +30,7 @@ window:
     y: 2
 
   # Spread additional padding evenly around the terminal content.
-  dynamic_padding: false
+  dynaic_padding: false
 
   # Window decorations
   #
@@ -72,6 +72,7 @@ window:
   # Override the variant of the GTK theme. Commonly supported values are `dark`
   # and `light`. Set this to `None` to use the default theme variant.
   #gtk_theme_variant: None  
+  opacity: 1
 
 scrolling:
   # Maximum number of lines in the scrollback buffer.
@@ -158,53 +159,41 @@ debug:
   # Record all characters and escape sequences as test data.
   ref_test: false
 
-# If `true`, bold text is drawn using the bright color variants.
-draw_bold_text_with_bright_colors: true
+draw_bold_text_with_bright_colors: false
 
-# Base16 Woodland - alacritty color config
+# Base16 Tomorrow Night - alacritty color config
 colors:
   # Default colors
   primary:
-    background: '0x231e18'
-    foreground: '0xcabcb1'
+    background: '0x1d1f21'
+    foreground: '0xc5c8c6'
 
-    # Bright and dim foreground colors
-    #
-    # The dimmed foreground color is calculated automatically if it is not present.
-    # If the bright foreground color is not set, or `draw_bold_text_with_bright_colors`
-    # is `false`, the normal foreground color will be used.
-    #dim_foreground: '0x9a9a9a'
-    #bright_foreground: '0xffffff'
-
-  # Cursor colors
-  #
-  # Colors which should be used to draw the terminal cursor. If these are unset,
-  # the cursor color will be the inverse of the cell color.
+  # Colors the cursor will use if `custom_cursor_colors` is true
   cursor:
-    text: '0x231e18'
-    cursor: '0xcabcb1'
+    text: '0x1d1f21'
+    cursor: '0xc5c8c6'
 
   # Normal colors
   normal:
-    black:   '0x231e18'
-    red:     '0xd35c5c'
-    green:   '0xb7ba53'
-    yellow:  '0xe0ac16'
-    blue:    '0x88a4d3'
-    magenta: '0xbb90e2'
-    cyan:    '0x6eb958'
-    white:   '0xcabcb1'
+    black:   '0x1d1f21'
+    red:     '0xcc6666'
+    green:   '0xb5bd68'
+    yellow:  '0xf0c674'
+    blue:    '0x81a2be'
+    magenta: '0xb294bb'
+    cyan:    '0x8abeb7'
+    white:   '0xc5c8c6'
 
   # Bright colors
   bright:
-    black:   '0x9d8b70'
-    red:     '0xca7f32'
-    green:   '0x302b25'
-    yellow:  '0x48413a'
-    blue:    '0xb4a490'
-    magenta: '0xd7c8bc'
-    cyan:    '0xb49368'
-    white:   '0xcabcb1'
+    black:   '0x969896'
+    red:     '0xde935f'
+    green:   '0x282a2e'
+    yellow:  '0x373b41'
+    blue:    '0xb4b7b4'
+    magenta: '0xe0e0e0'
+    cyan:    '0xa3685a'
+    white:   '0xffffff'
 
   # Dim colors
   #
@@ -271,12 +260,6 @@ colors:
   #
   #command: None
 
-# Background opacity
-#
-# Window opacity as a floating point number from `0.0` to `1.0`.
-# The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 1.0
-
 # Mouse bindings
 #
 # Available fields:
@@ -338,9 +321,11 @@ live_config_reload: true
 #   - (Linux/macOS) /bin/bash --login
 #   - (Windows) powershell
 shell:
-    program: /usr/local/bin/tmux
-    args:
-     - -u # force UTF-8 in tmux
+  program: /opt/homebrew/bin/fish
+  args:
+    - -l
+    - -c
+    - "tmux attach || tmux"
 
 # Windows 10 ConPTY backend (Windows only)
 #
