--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,12 +1,12 @@
+[general]
 live_config_reload = true
 
 [env]
 TERM = "xterm-256color"
 
-[shell]
-args = ["-l", "-c", "tmux attach || tmux"]
+[terminal.shell]
 program = "/opt/homebrew/bin/fish"
-# program = "/usr/local/bin/fish"
+args = ["-l", "-c", "tmux attach || tmux"]
 
 [debug]
 log_level = "Warn"
